attached_assets/Pasted-File-app-bot-py-line-114-await-update-message-reply-tex_1780720389042.txt
File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'
  File "/app/bot.py", line 114
    await update.message.reply_text(f"¡Entendido! Generando subtítulos en {", ".join([SUPPORTED_LANGUAGES[lang] for lang in selected_languages])}. Esto puede tardar un poco...")
                                                                            ^
SyntaxError: f-string: expecting '}'